# test-template-lib-crate

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: main.rs
src/: lib.rs
tests/: a.rs
